// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message return complete 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "

🚀 mock message
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return exit 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "

💩 mock message
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return failure 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "[101m[30m[30m
 failure [0m[0m[0m",
      "[31mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "[102m[30m[30m
 success [0m[0m[0m",
      "[32mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return warning 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "[103m[30m[30m
 warning [0m[0m[0m",
      "[33mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
